--- a/assets/style.css
+++ b/assets/style.css
@@ -44,6 +44,7 @@ body {
   
   .past {
     background-color: #d3d3d3;
+    border: 2px black;
     color: white;
   }
   
@@ -65,7 +66,7 @@ body {
     color: white;
   }
   
-  .saveBtn i:hover {
+  .saveBtn:hover {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
