--- a/assets/style.css
+++ b/assets/style.css
@@ -39,7 +39,13 @@ body {
   .hour {
     background-color: #ffffff;
     color: #000000;
+    border: none;
     border-top: 1px dashed #000000;
+  }
+
+  .input-group-text {
+    background-color: #ffffff;
+    border: none;
   }
   
   .past {
@@ -70,4 +76,3 @@ body {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
-  
